--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,10 +47,18 @@ android {
         applicationId "com.example.carpooling_o6u_students"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 23
         targetSdkVersion flutter.targetSdkVersion
+        multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+    }
+    compileOptions {
+    // Flag to enable support for the new language APIs
+    coreLibraryDesugaringEnabled true
+    // Sets Java compatibility to Java 8
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
     }
 
     buildTypes {
@@ -68,4 +76,11 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-messaging:14.2.6'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    
 }
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.android.application'
+
