--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,41 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get: ^4.6.5
+  flutter_screenutil: ^5.6.1
+  get_storage: ^2.1.1
+  firebase_core: ^2.7.0
+  cloud_firestore: ^4.4.3
+  firebase_auth: ^4.2.9
+  location: ^4.4.0
+  geocoding: ^2.1.0
+  eva_icons_flutter: ^3.1.0
+
+  
+  
+  permission_handler: ^10.2.0
+  change_app_package_name: ^1.1.0
+  animated_text_kit: ^4.2.2
+  # google_maps_flutter: ^2.2.5
+  smooth_page_indicator: ^1.0.1
+  flutter_local_notifications: ^14.0.0+2
+  firebase_storage: ^11.0.15
+  dartz: ^0.10.1
+  file_picker: ^5.2.11
+  http: ^0.13.6
+ 
+  flutter_spinkit: ^5.1.0
+  firebase_messaging: ^14.2.6
+  google_maps_flutter: ^2.2.6
+  # awesome_notifications: ^0.7.4+1
+  # flutter_local_notifications: ^14.0.0+2
+  intl: ^0.17.0
+  
+  flutter_geocoder_alternative: ^1.0.3
+  font_awesome_flutter: ^10.4.0
+  # geocoding: ^2.1.0
+  flutter_google_places: 
+  google_api_headers: 
 
 dev_dependencies:
   flutter_test:
@@ -59,8 +94,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
