--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   location: ^4.4.0
   geocoding: ^2.1.0
   eva_icons_flutter: ^3.1.0
+  flutter_rating_bar: ^4.0.1
 
   
   
@@ -57,6 +58,8 @@ dependencies:
   dartz: ^0.10.1
   file_picker: ^5.2.11
   http: ^0.13.6
+  flutter_phone_direct_caller: ^2.1.1
+  flutter_polyline_points: ^1.0.0
  
   flutter_spinkit: ^5.1.0
   firebase_messaging: ^14.2.6
