--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,11 +41,11 @@ dependencies:
   firebase_core: ^2.7.0
   cloud_firestore: ^4.4.3
   firebase_auth: ^4.2.9
-  location: ^4.4.0
+#  location: ^4.4.0
   geocoding: ^2.1.0
   eva_icons_flutter: ^3.1.0
   flutter_rating_bar: ^4.0.1
-
+  geolocator: ^9.0.2
   
   
   permission_handler: ^10.2.0
@@ -60,6 +60,7 @@ dependencies:
   http: ^0.13.6
   flutter_phone_direct_caller: ^2.1.1
   flutter_polyline_points: ^1.0.0
+  slide_drawer: ^1.0.3
  
   flutter_spinkit: ^5.1.0
   firebase_messaging: ^14.2.6
